--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,10 +14,10 @@ jobs:
     
     strategy:
       matrix:
-        go-version: ['1.19', '1.20']
+        go-version: ['1.19', '1.20', '1.21']
         
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
